--- a/Website/ZAPWebsite/ZAPWebsite/Site.Master
+++ b/Website/ZAPWebsite/ZAPWebsite/Site.Master
@@ -6,7 +6,7 @@
 <head runat="server">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%: Page.Title %> - My ASP.NET Application</title>
+    <title><%: Page.Title %> - ZAP Beach Camping</title>
 
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/bundles/modernizr") %>
@@ -14,6 +14,8 @@
 
     <webopt:bundlereference runat="server" path="~/Content/css" />
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+
+    <link href="~/Stylesheets/MasterPage.css" rel="stylesheet" />
 
 </head>
 <body>
@@ -35,35 +37,27 @@
                 <asp:ScriptReference Name="Focus.js" Assembly="System.Web" Path="~/Scripts/WebForms/Focus.js" />
                 <asp:ScriptReference Name="WebFormsBundle" />
                 <%--Site Scripts--%>
+
             </Scripts>
         </asp:ScriptManager>
 
-        <div class="navbar navbar-inverse navbar-fixed-top">
+        <nav class="navbar navbar-expand-sm">
             <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-       
-                    <a class="navbar-brand" runat="server" href="~/">
-                        <img src="/Images/logo.png" class="" alt="Logo"">
-                        <svg width="40" height="32" class="d-block my-1" viewBox="0 0 118 94" role="img">
-                            
-                        </svg>
-                    </a>
-                </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a runat="server" href="~/">Hjem</a></li>
-                        <li><a runat="server" href="~/Booking">Booking</a></li>
                         <li><a runat="server" href="~/About">Om os</a></li>
                         <li><a runat="server" href="~/Contact">Kontakt</a></li>
                     </ul>
+                    <a class="btn btn-danger navbar-btn" href="Booking">Booking</a>
                 </div>
             </div>
-        </div>
+        </nav>
+
+
+        
+
+
         <div class="container body-content">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
