--- a/Website/ZAPWebsite/ZAPWebsite/Stylesheets/MasterPage.css
+++ b/Website/ZAPWebsite/ZAPWebsite/Stylesheets/MasterPage.css
@@ -1,9 +1,4 @@
 ﻿body {
-    background-color: lightgoldenrodyellow;
-    color: lightblue;
-}
-
-.Background {
-    background-color: lightgoldenrodyellow;
-    color: lightblue;
+    background-color: white;
+    color: black;
 }
