--- a/Website/ZAPWebsite/ZAPWebsite/Site.Master
+++ b/Website/ZAPWebsite/ZAPWebsite/Site.Master
@@ -15,6 +15,7 @@
     <webopt:bundlereference runat="server" path="~/Content/css" />
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link href="~/Stylesheets/MasterPage.css" rel="stylesheet" />
+    <link href="Stylesheets/Booking.css" rel="stylesheet" />
 
     <style>
         /* Remove the navbar's default rounded borders */
