Improved booking site.
You can now select a room and it will send you to the order page.

--- a/Website/ZAPWebsite/ZAPWebsite/Stylesheets/Booking.css
+++ b/Website/ZAPWebsite/ZAPWebsite/Stylesheets/Booking.css
@@ -2,10 +2,15 @@
 }
 .left-right {
     overflow: auto;
+    overflow-x: hidden;
     height: 60vh;
     position: relative;
     /*background-color: #333;*/
     clear: left;
+
+}
+.hidescroll::-webkit-scrollbar {
+    display: none;
 }
 div.l1, div.l2, div.l3 {
     width: 100%;
