--- a/Website/ZAPWebsite/ZAPWebsite/Stylesheets/OrderPage.css
+++ b/Website/ZAPWebsite/ZAPWebsite/Stylesheets/OrderPage.css
@@ -1,10 +1,93 @@
-﻿body {
+﻿.OPgridview {
+    box-sizing: border-box;
+    padding: 10px;
 }
 
-.divflexbox {
+#LeftDiv {
+    width: 25%;
+    float: left;
+}
+
+#RightDiv {
+    width: 33%;
+    float: left;
+}
+
+#CenterDiv {
+    width: 41%;
+    float: left;
+}
+
+.additiongroup {
+    display: table;
+    margin: 5px;
+    width: 80%;
+}
+.additioninput {
+    width: 18%;
+    margin-right: 10px;
+    vertical-align: text-top;
+}
+.additionvalidation {
+    position: absolute;
+    left: 9.5%;
+    z-index: 1;
+    background-color: white;
+    padding: 2px;
+    border: 2px solid red;
+    border-radius: 7px;
+}
+.addition-name {
+    width: 50%;
+    display: inline-block;
+    text-align: left;
+    margin-right: 5px;
+}
+.addition-price {
+    float:right;
+    padding:1px;
+}
+
+#OP_content {
     display: flex;
-    background-color:green;
-    margin: 10px;
-    color:aqua;
-    
+}
+.customergroup {
+    display: table;
+    width: 95%
+}
+.customerlabel {
+    display: inline-block;
+    width: 16%;
+    text-align: right;
+    margin-right: 5px;
+}
+.customerinput {
+    margin: 5px;
+}
+.customervalidator {
+    font-size: 12px;
+    color: red;
+}
+#create_cust_div {
+    display: grid;
+
+}
+.OP-h6 {
+    margin: 0px;
+    font-size: 1.2em;
+    font-weight: 600;
+    text-align: start;
+}
+.OP-addition-la {
+    font-weight: 100;
+}
+.periode {
+    font-size: 1.2em;
+}
+.TotalPriceText {
+    font-weight: 700;
+    font-size: x-large;
+}
+#totalpricediv {
+    margin-top: 11px;
 }
