--- a/Website/ZAPWebsite/ZAPWebsite/Stylesheets/OrderPage.css
+++ b/Website/ZAPWebsite/ZAPWebsite/Stylesheets/OrderPage.css
@@ -95,3 +95,24 @@
     color: red;
     font-size: 0.9em;
 }
+.reservation_la {
+    font-size: 125%;
+}
+.reservationfieldname_la {
+    font-size:175%;
+}
+.confirmdatalist_div {
+}
+#MainContent_confirm_div {
+    margin-right: auto;
+    margin-left: auto;
+}
+.res_fieldgroup {
+    margin-bottom:2%
+}
+.res_datefieldgroup {
+
+}
+#pricecomment_la {
+
+}
