--- a/Website/ZAPWebsite/ZAPWebsite/Stylesheets/OrderPage.css
+++ b/Website/ZAPWebsite/ZAPWebsite/Stylesheets/OrderPage.css
@@ -116,3 +116,8 @@
 #pricecomment_la {
 
 }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
