--- a/Website/ZAPWebsite/ZAPWebsite/Stylesheets/Booking.css
+++ b/Website/ZAPWebsite/ZAPWebsite/Stylesheets/Booking.css
@@ -86,7 +86,7 @@ p {
     -webkit-transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
     -o-transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
     transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
-    background-image: url('Images/Cards/CardPic.jpg');
+    background-image: url('../Images/Cards/CardPic.jpg');
     background-size: cover;
     background-repeat: no-repeat;
 }
